# teciocpp

./: .editorconfig  .gitignore  .licenserc.json  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: build.yaml  qa.yaml  release.yaml
cmake/: CodeCoverage.cmake  FindTecIO.cmake  Sanitization.cmake  teciocpp-config.cmake.in
contrib/tecio/: CMakeLists.txt
contrib/tecio/teciompisrc/: CMakeLists.txt
contrib/tecio/teciosrc/: CMakeLists.txt  FACE.h  GLOBAL.h  TecplotMinorRev.h  TecplotVersion.h  Version.h  stringformat.h
include/teciocpp/: enums.h  exception.h  file.h  teciocpp.h
include/teciocpp/impl/: file.h  utils.h
src/: CMakeLists.txt  exception.cpp  file.cpp
test/: CMakeLists.txt  file_test.cpp  main.cpp  utils_test.cpp
